external-crates/move/crates/move-compiler/tests/move_check/expansion/spec_schema_member_conflicts.exp
warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:4:5
  │  
4 │ ╭     spec schema Foo<T> {
5 │ │         ensures true;
6 │ │     }
  │ ╰─────^ Specification blocks are deprecated

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:7:12
  │
4 │     spec schema Foo<T> {
  │                 --- Alias previously defined here
  ·
7 │     struct Foo {}
  │            ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:11:5
   │  
11 │ ╭     spec schema Foo<T> {
12 │ │         ensures true;
13 │ │     }
   │ ╰─────^ Specification blocks are deprecated

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:14:5
   │  
14 │ ╭     spec schema Foo<T> {
15 │ │         ensures true;
16 │ │     }
   │ ╰─────^ Specification blocks are deprecated

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:14:17
   │
11 │     spec schema Foo<T> {
   │                 --- Alias previously defined here
   ·
14 │     spec schema Foo<T> {
   │                 ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:20:5
   │  
20 │ ╭     spec schema Foo<T> {
21 │ │         ensures true;
22 │ │     }
   │ ╰─────^ Specification blocks are deprecated

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:23:9
   │
20 │     spec schema Foo<T> {
   │                 --- Alias previously defined here
   ·
23 │     fun Foo() {}
   │         ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:27:5
   │  
27 │ ╭     spec schema Foo<T> {
28 │ │         ensures true;
29 │ │     }
   │ ╰─────^ Specification blocks are deprecated

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:30:5
   │  
30 │ ╭     spec module {
31 │ │         fun Foo(): bool { false }
32 │ │     }
   │ ╰─────^ Specification blocks are deprecated

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/expansion/spec_schema_member_conflicts.move:31:13
   │
27 │     spec schema Foo<T> {
   │                 --- Alias previously defined here
   ·
31 │         fun Foo(): bool { false }
   │             ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

